--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Chango&family=Poppins:wght@100&family=Roboto+Mono:wght@300&display=swap');
 
 :root {
-    --primary-color: #f5f5f5;
+    --primary-color: #eee;
     --secondary-color: #e44232;
     --secondary-color-hover: #e44132cb;
+    --sidebar-color: #ddd;
+    --sidebar-color-hover: #2524246b;
     --padding-sm: .5rem;
     --padding-md: 1rem;
     --padding-lg: 2rem;
@@ -19,12 +21,14 @@ body {
     background-color: var(--primary-color);
 }
 
+/* HEADER */
 header {
     height: 2rem;
     display: flex;
     justify-content: space-between;
     padding: var(--padding-sm);
     background-color: var(--secondary-color);
+    width: 100%;
 }
 
 header img{
@@ -49,6 +53,73 @@ header img:hover {
 
 .header-link:hover {
     cursor: pointer;
-    border-bottom: 2px solid var(--primary-color);
-    
+    border-bottom: 2px solid var(--primary-color); 
+}
+
+/* MAIN */
+.main {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.sidebar {
+    width: 27%;
+    background-color: var(--sidebar-color);
+    padding: var(--padding-md);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sidebar-container {
+    height: 2rem;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    border-radius: .5rem;
+    padding: .5rem;
+}
+
+.sidebar-container:hover {
+    cursor: pointer;
+    background-color: var(--sidebar-color-hover);
+}
+
+.sidebar-container img {
+    height: 2rem;
+}
+
+.projects-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.current-project {
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .main {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        display: none;
+    }
+
+    .sidebar.active {
+        display: block;
+        width: 100%;
+    }
+
+    .accounts-container {
+        display: none;
+    }
 }
