--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -31,6 +31,7 @@ header {
     justify-content: space-between;
     padding-left: 2rem;
     padding-right: 2rem;
+    left: 0;
 }
 
 header img{
@@ -83,7 +84,6 @@ header img:hover {
 
 .sidebar-container {
     height: 2rem;
-    width: 80%;
     display: flex;
     align-items: center;
     font-size: 1rem;
@@ -114,7 +114,7 @@ header img:hover {
     width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .main {
         flex-direction: column;
     }
@@ -122,7 +122,6 @@ header img:hover {
     .sidebar {
         display: none;
     }
-
 
     .menu-button {
         display: flex;
@@ -132,7 +131,7 @@ header img:hover {
 
     .sidebar.active {
         display: block;
-        width: 100%;
+        width: 95%;
     }
 
     .accounts-container {
