--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -122,12 +122,25 @@ footer {
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    padding: var(--padding-md)
+    padding: var(--padding-sm)
 }
 
-footer a {
+footer p {
     text-decoration: none;
     color: white;
+    padding: 0;
+    margin: 0;
+}
+
+footer img {
+    margin-top: 6px;
+    filter: invert(100%) sepia(0%) saturate(7494%) hue-rotate(278deg) brightness(106%) contrast(101%);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+footer img:hover {
+    transform: rotate(360deg);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 @media (max-width: 900px) {
