Click on project brings up its' page

--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -110,6 +110,10 @@ header img:hover {
     margin-top: 2rem;
 }
 
+.project {
+    justify-content: space-between;
+}
+
 .current-project {
     width: 100%;
 }
